# Teus

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  REFERENCES.md  ROADMAP.md  diesel.toml  install.sh  teus.service  teus.toml  uninstall.sh
.github/workflows/: rust.yml
.zed/: tasks.json
crates/docker/: Cargo.toml
crates/docker/src/: container.rs  docker.rs  lib.rs  requests.rs
crates/sysd/: Cargo.toml
crates/teus-api/: Cargo.toml
crates/teus-api/src/: routes.rs
crates/teus-api/src/handlers/: systeminfo.rs
crates/teus-auth/: Cargo.toml
crates/teus-auth/src/: handlers.rs  lib.rs  middleware.rs  mutation.rs  query.rs  schema.rs
crates/teus-config/: Cargo.toml
crates/teus-config/src/config/: handlers.rs  mod.rs  mutation.rs  parser.rs  query.rs  schema.rs
crates/teus-database/: Cargo.toml
crates/teus-database/src/: storage.rs
crates/teus-docker/: Cargo.toml
crates/teus-docker/src/: errors.rs  handlers.rs  lib.rs
crates/teus-monitor/: Cargo.toml
crates/teus-monitor/src/: lib.rs  mutation.rs  query.rs  schema.rs  sys.rs
crates/teus-schema/: Cargo.toml
crates/teus-services/: Cargo.toml
crates/teus-services/src/bookmarks/: handlers.rs  mod.rs  mutation.rs  schema.rs
crates/teus-types/: Cargo.toml
crates/teus-types/src/: lib.rs
migrations/: create_tables.sql
migrations/2025-04-15-215948_create_user/: up.sql
migrations/2025-04-15-220022_create_config/: up.sql
migrations/2025-04-15-220108_create_services/: down.sql  up.sql
migrations/2025-04-15-220141_create_sysinfo/: down.sql  up.sql
migrations/2025-04-15-221017_create_diskynfo/: down.sql  up.sql
migrations/2025-04-22-205243_add_salt_user/: down.sql  up.sql
scripts/: generate_secret.py
src/: main.rs  schema.rs  utils.rs
src/config/: handlers.rs  mod.rs  parser.rs  query.rs  schema.rs  types.rs
src/monitor/: mod.rs  mutation.rs  query.rs  schema.rs  storage.rs  sys.rs
src/webserver/: api.rs  mod.rs
src/webserver/auth/: handlers.rs  middleware.rs  mod.rs  query.rs  schema.rs
src/webserver/models/: mod.rs  sysmodels.rs
src/webserver/services/: systeminfo.rs
teus/: lib.rs  main.rs  schema.rs  utils.rs
teus/bookmarks/: handlers.rs  mod.rs  mutation.rs  schema.rs
teus/config/: handlers.rs  mod.rs  mutation.rs  parser.rs  query.rs  schema.rs  types.rs
teus/monitor/: mod.rs  schema.rs  storage.rs  sys.rs
teus/webserver/: api.rs  mod.rs
teus/webserver/auth/: handlers.rs  middleware.rs  mod.rs  mutation.rs  query.rs  schema.rs
teus/webserver/docker/: handlers.rs
teus/webserver/models/: sysmodels.rs
teus/webserver/services/: systeminfo.rs
