[workspace]
members = [
    ".",
    "crates/teus-types",
    "crates/teus-config",
    "crates/teus-database",
    "crates/teus-monitor",
    "crates/teus-auth",
    "crates/teus-api",
    "crates/teus-services",
    "crates/teus-docker",
    "crates/sysd",
]
default-members = ["."]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
actix-web = "4.9"

[dependencies]
teus-types = { path = "crates/teus-types" }
teus-config = { path = "crates/teus-config" }
teus-database = { path = "crates/teus-database" }
teus-monitor = { path = "crates/teus-monitor" }
teus-auth = { path = "crates/teus-auth" }
teus-api = { path = "crates/teus-api" }
teus-services = { path = "crates/teus-services" }
teus-docker = { path = "crates/teus-docker" }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[package]
name = "teus"
version = "0.1.0"
edition = "2021"
authors = ['immgion']

[lib]
name = "teus"
path = "teus/lib.rs"

[[bin]]
name = "teus"
path = "./teus/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary
panic = "abort"   # Abort on panic instead of unwinding
codegen-units = 1 # Reduce parallel code generation units

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
