[package]
name = "docker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] } # Or latest version, "json" feature is handy
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
