[package]
name = "teus-config"
version = "0.1.0"
edition = "2024"

[dependencies]
teus-types = { path = "../teus-types" }
teus-schema = { path = "../teus-schema" }
teus-database = { path = "../teus-database" }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
