[package]
name = "teus-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
teus-types = { path = "../teus-types" }
docker = { path = "../docker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4.9"
serde_qs = "0.13"
