[package]
name = "teus-services"
version = "0.1.0"
edition = "2024"

[dependencies]
teus-monitor = { path = "../teus-monitor" }
teus-types = { path = "../teus-types" }
teus-auth = { path = "../teus-auth" }
teus-database = { path = "../teus-database" }
teus-schema = { path = "../teus-schema" }
serde_json = "1.0"
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
